--- a/miEstilo.css
+++ b/miEstilo.css
@@ -2,3 +2,21 @@ h1{
     color: #e30606;
     font-family: 'Press Start 2P', cursive;
 }
+#tablero{
+    border: 2px solid #ff0000;
+    width: 594px;
+    width: 594px;
+}
+tr{
+    border: 2px solid #ff0000;
+    height: 66px;
+    width: 594px;
+}
+td{
+    
+    height: 66px;
+    width: 66px;
+}
+.borde_derecho{
+    border-right: 3px solid #181818;
+}
