Se tildo las cosas hechas

--- a/miEstilo.css
+++ b/miEstilo.css
@@ -1,29 +1,35 @@
 h1 {
-    background:black;
-    color:white;
-    margin:0px 0px 2px 0px;
-    font-size:40px;
-    padding:2px 1px 5px 1px;
-    text-align:center;
+    background: black;
+    color: white;
+    margin: 0px 0px 2px 0px;
+    font-size: 40px;
+    padding: 2px 1px 5px 1px;
+    text-align: center;
     font-family: 'Press Start 2P', cursive;
 }
 
+#tablero {
+    border-collapse: collapse;
+    width: 594px;
+    height: 594px;
+}
 
-#tablero{
-    border: 2px solid #ff0000;
-    width: 594px;
-    width: 594px;
-}
-tr{
-    border: 2px solid #ff0000;
+tr {
     height: 66px;
     width: 594px;
 }
-td{
-    
+
+td {
+    border: 1px solid black;
     height: 66px;
-    width: 65px;
+    width: 66px;
 }
-.borde_derecho{
-    border-right: 3px solid #181818;
+
+.borde_derecho {
+    border-right: 3px solid black;
 }
+
+.borde_fila {
+    border-bottom: 3px solid black;
+}
+
