--- a/Estilo_como_jugar.css
+++ b/Estilo_como_jugar.css
@@ -8,9 +8,35 @@ h1 {
     font-family: 'Press Start 2P', cursive;
 }
 
-body{
-    background: linear-gradient(to bottom, white, gray,black);
+body {
+    background: linear-gradient(to bottom, white, gray, black);
     background: url("imagenes/fondo_gris.png");
     text-align: center;
 }
 
+.boton{
+    background-color: rgb(255,101,71);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.boton{
+    background-color: white;
+    color: black;
+    border: 2px solid rgb(255,101,71);
+}
+
+.boton:hover{
+    border: 3px solid rgb(255,101,71);
+    background-color: rgb(255,101,71,0.6);
+    color: white;
+}
