--- a/Estilo_Index.css
+++ b/Estilo_Index.css
@@ -1,28 +1,48 @@
 h1 {
-    height: 300px;
-    width: 100%;
-    font-size: 80px;
+    background: black;
+    color: white;
+    margin: 0px 0px 2px 0px;
+    font-size: 40px;
+    padding: 2px 1px 5px 1px;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 20px;
-    color: rgb(255, 119, 92);
-    line-height: 300px;
+    font-family: 'Press Start 2P', cursive;
 }
-#formulario_dificultad{
-    width: 400px;
-    height: 155px;
-    background: rgba(252, 159, 140, 0.842);
-    text-align: center;
-    line-height: 45px;
-    border: 3px solid rgb(255, 101, 71);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    color: rgb(66, 66, 66);
-}
+
 body{
-    background:
-    url(imagenes/fondo.png);
+    background: linear-gradient(to bottom, white, gray, black);
+    background: url(imagenes/fondo_con_movimiento.gif);
+    text-align: center;
 }
-#tiempo{
-    margin-right: 20px;
+
+a:visited, a:link{
+    color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+button {
+    background-color: rgb(255, 101, 71);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+button {
+    background-color: #000000;
+    color: rgb(255, 101, 71);
+}
+
+button:hover {
+    border: 3px solid rgb(183, 255, 0);
+    background-color: rgb(140, 140, 140);
+    color: white;
 }
