--- a/Estilo_Jugar_2.css
+++ b/Estilo_Jugar_2.css
@@ -1,12 +1,39 @@
-h1 {
-    background: black;
-    color: white;
-    margin: 0px 0px 2px 0px;
-    font-size: 40px;
-    padding: 2px 1px 5px 1px;
+body{
+    background:
+    url(imagenes/fondo_gris.png);
     text-align: center;
-    font-family: 'Press Start 2P', cursive;
-    margin-bottom: 25px;
+}
+
+h1 {
+    height: 25%;
+    width: 100%;
+    font-size: 80px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(255, 119, 92);
+    line-height: 80%;
+}
+
+.div{
+    margin-bottom: 30px;
+    background-color: rgb(114, 114, 114);
+    height: 25%;
+    width: 50%;
+    text-align:center;
+    line-height: 50%;
+    float: left;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(243, 243, 243);
+}
+
+#dificultad{
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(73, 73, 73);
+}
+
+.clearfix{
+    clear: both;
 }
 
 #tablero {
@@ -32,18 +59,4 @@ td {
 
 .borde_fila {
     border-bottom: 3px solid black;
-}
-
-.div{
-    margin-bottom: 30px;
-    background-color: rgb(114, 114, 114);
-    height: 100px;
-    width: 33%;
-    text-align:center;
-    line-height: 50px;
-    float: left;
-}
-
-.clearfix{
-    clear: both;
 }
