CSS en todas las paginas

--- a/Estilo_Jugar.css
+++ b/Estilo_Jugar.css
@@ -13,18 +13,115 @@ h1 {
     margin-bottom: 80px;
     color: rgb(255, 119, 92);
     line-height: 80%;
+    text-shadow: 0px 1px 0px rgb(255, 101, 71), 0px 2px 0px rgb(219, 90, 64), 0px 3px 0px rgb(199, 79, 54), 0px 4px 0px rgb(180, 72, 50), 0px 5px 0px rgb(161, 72, 54), 0px 6px 0px rgb(143, 57, 40), 0px 7px 0px rgb(100, 38, 26), 0px 8px 7px rgb(0, 0, 0);
 }
 
 #formulario_dificultad{
-    width: 400px;
-    height: 155px;
-    background: rgba(252, 159, 140, 0.6);
+    width: 500px;
+    height: 70px;
+    background: rgba(255, 255, 255, 0.6);
+    text-align: center;
+    line-height: 70px;
+    border: 3px solid rgb(255, 101, 71);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: rgb(66, 66, 66);
+    margin-top: 10%;
+    transition: box-shadow 0.7s ease;
+}
+
+#formulario_dificultad:hover{
+    box-shadow: 0 0 10px rgb(255, 170, 139), 0 0 20px rgb(255, 170, 139), 0 0 20px rgb(255, 170, 139);
+}
+
+.dificultad{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(66, 66, 66);
+    margin: 0px 20px;
+    padding: 0px 10px;
+}
+
+.dificultad:hover{
+    background: rgb(255, 101, 71, 0.6);
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+}
+
+input{
+    display: none;
+}
+
+input:checked + label{
+    background: rgb(255, 101, 71, 0.6);
+    color: rgb(255, 255, 255);
+    border: 2px solid rgb(255, 101, 71);
+    border-radius: 5px;
+}
+
+#formulario_tiempo{
+    width: 200px;
+    height: 50px;
+    background: rgba(255, 255, 255, 0.6);
     text-align: center;
     line-height: 45px;
     border: 3px solid rgb(255, 101, 71);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     color: rgb(66, 66, 66);
+    margin-top: 3%;
+    transition: box-shadow 0.7s ease;
+    margin-left: 36.5%;
+    border-radius: 20px;
+}
+
+#formulario_tiempo:hover{
+    background: rgb(255, 199, 178, 0.4);
+    box-shadow: 0 0 10px rgb(255, 170, 139), 0 0 20px rgb(255, 170, 139), 0 0 20px rgb(255, 170, 139);
+}
+
+#formulario_vidas{
+    width: 200px;
+    height: 50px;
+    background: rgba(255, 255, 255, 0.6);
+    text-align: center;
+    line-height: 45px;
+    border: 3px solid rgb(255, 101, 71);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: rgb(66, 66, 66);
+    margin-top: 3%;
+    border-radius: 20px;
+    transition: box-shadow 0.7s ease;
+}
+
+#formulario_vidas:hover{
+    background: rgb(255, 199, 178, 0.4);
+    box-shadow: 0 0 10px rgb(255, 170, 139), 0 0 20px rgb(255, 170, 139), 0 0 20px rgb(255, 170, 139);
+}
+
+.formulario{
+    float: left;
+    margin-left: 5%;
+}
+
+select{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(66, 66, 66);
+    background: rgba(252, 159, 140, 0.6);
+    border-radius: 5px;
+    border: 2px solid rgb(255, 101, 71);
+    font-weight: bold;
+}
+
+select:checked + label{
+    border-radius: 5px;
+    border: 2px solid rgb(255, 101, 71);
+}
+
+.clearfix{
+    clear: both;
 }
 
 a:visited, a:link{
@@ -47,11 +144,10 @@ button {
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
-}
-
-button {
     background-color: white; 
     color: rgb(255, 101, 71); 
+    border: 2px solid rgb(255, 101, 71);
+    width: 180px;
 }
 
 button:hover {
