--- a/Estilo_como_jugar.css
+++ b/Estilo_como_jugar.css
@@ -1,11 +1,13 @@
 h1 {
-    background: black;
+    height: 75px;
+    width: 100%;
+    background: rgb(71, 71, 71);
     color: white;
-    margin: 0px 0px 2px 0px;
     font-size: 40px;
-    padding: 2px 1px 5px 1px;
+    line-height: 75px;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
+    text-shadow: 0px 1px 0px rgb(255, 101, 71), 0px 2px 0px rgb(219, 90, 64), 0px 3px 0px rgb(199, 79, 54), 0px 4px 0px rgb(180, 72, 50), 0px 5px 0px rgb(161, 72, 54), 0px 6px 0px rgb(143, 57, 40), 0px 7px 0px rgb(100, 38, 26), 0px 8px 7px rgb(0, 0, 0);
 }
 
 body {
@@ -34,11 +36,10 @@ button {
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
-}
-
-button {
-    background-color: white;
-    color: rgb(255, 101, 71);
+    background-color: white; 
+    color: rgb(255, 101, 71); 
+    border: 2px solid rgb(150, 150, 150);
+    width: 180px;
 }
 
 button:hover {
