--- a/Estilo_Jugar_2.css
+++ b/Estilo_Jugar_2.css
@@ -6,14 +6,24 @@ body{
 
 h1 {
     height: 75px;
-    width: 100%;
+    width: 99%;
     background: rgb(71, 71, 71);
     color: white;
     font-size: 40px;
     line-height: 75px;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
-    text-shadow: 0px 1px 0px rgb(255, 101, 71), 0px 2px 0px rgb(219, 90, 64), 0px 3px 0px rgb(199, 79, 54), 0px 4px 0px rgb(180, 72, 50), 0px 5px 0px rgb(161, 72, 54), 0px 6px 0px rgb(143, 57, 40), 0px 7px 0px rgb(100, 38, 26), 0px 8px 7px rgb(0, 0, 0);
+    text-shadow: 
+    0px 1px 0px rgb(255, 101, 71), 
+    0px 2px 0px rgb(219, 90, 64), 
+    0px 3px 0px rgb(199, 79, 54), 
+    0px 4px 0px rgb(180, 72, 50), 
+    0px 5px 0px rgb(161, 72, 54), 
+    0px 6px 0px rgb(143, 57, 40), 
+    0px 7px 0px rgb(100, 38, 26), 
+    0px 8px 7px rgb(0, 0, 0);
+    position: fixed;
+    top: 10px;
 }
 
 .div{
@@ -22,10 +32,21 @@ h1 {
 }
 
 #dificultad{
-    width: 100%;
+    height: 45px;
+    width: 200px;
+    line-height: 45px;
+    background: rgb(185, 185, 185);
+    text-align: center;
+    border: 3px solid rgb(255, 101, 71);
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(66, 66, 66);
+    font-size: 20px;
+    color: rgb(255, 255, 255);
 }
+
+#div1{
+    margin-left: 44%;
+}
+
 
 #tiempo{
     height: 45px;
@@ -39,7 +60,7 @@ h1 {
     color: rgb(255, 255, 255);
 }
 
-#div1{
+#div2{
     margin-left: 18%;
 }
 
@@ -55,7 +76,7 @@ h1 {
     color: rgb(255, 255, 255);
 }
 
-#div2{
+#div3{
     margin-left: 42%;
 }
 
