--- a/Estilo_Jugar_2.css
+++ b/Estilo_Jugar_2.css
@@ -44,6 +44,7 @@ h1 {
 }
 
 #div1{
+    margin-top: 5%;
     margin-left: 44%;
 }
 
@@ -61,7 +62,7 @@ h1 {
 }
 
 #div2{
-    margin-left: 18%;
+    margin-left: 22%;
 }
 
 #vidas{
@@ -77,10 +78,10 @@ h1 {
 }
 
 #div3{
-    margin-left: 42%;
+    margin-left: 34%;
 }
 
-label{
+.texto{
     text-shadow: 0 0 10px rgb(255, 170, 139), 0 0 20px rgb(255, 170, 139), 0 0 20px rgb(255, 170, 139);
 }
 
@@ -88,27 +89,135 @@ label{
     clear: both;
 }
 
+section{
+    position: relative;
+}
+
 #tablero {
     border-collapse: collapse;
-    width: 594px;
-    height: 594px;
+    border-radius: 10px;
+    width: 405px;
+    height: 405px;
+    background-image: url(imagenes/fondo_tablero.png);
 }
 
 tr {
-    height: 66px;
-    width: 594px;
+    height: 45px;
+    width: 405px;
 }
 
 td {
-    border: 1px solid black;
-    height: 66px;
-    width: 66px;
+    height: 45px;
+    width: 45px;
+}
+
+.borde{
+    border: 1px solid rgb(71, 71, 71);
+}
+
+.borde_1{
+    border: 1px solid rgb(71, 71, 71);
+    border-top: 0px;
+}
+
+.borde_2{
+    border: 1px solid rgb(71, 71, 71);
+    border-bottom: 0px;
+}
+
+#c1{
+    border-left: 0px;
+}
+
+#c9{
+    border-right: 0px;
 }
 
 .borde_derecho {
-    border-right: 3px solid black;
+    border: 1px solid rgb(71, 71, 71);
+    border-right: 3px solid rgb(71, 71, 71);
+}
+
+.borde_1_derecho{
+    border: 1px solid rgb(71, 71, 71);
+    border-top: 0px;
+    border-right: 3px solid rgb(71, 71, 71);
+}
+
+.borde_2_derecho{
+    border: 1px solid rgb(71, 71, 71);
+    border-bottom: 0px;
+    border-right: 3px solid rgb(71, 71, 71);
 }
 
 .borde_fila {
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid rgb(71, 71, 71);
 }
+
+.tablero{
+    display: inline-block;
+}
+
+#borde_tablero{
+    border: 1px solid rgb(71, 71, 71);
+    border-radius: 10px;
+    margin-right: 20px;
+}
+
+#botones{
+    height: 435px;
+    position: absolute;
+    top: 0px;
+}
+
+.num{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: rgb(71, 71, 71);
+}
+
+a:visited, a:link{
+    color: rgb(66, 66, 66);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+button {
+    background-color: rgb(255, 101, 71);
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: white; 
+    color: rgb(255, 101, 71); 
+    border: 2px solid rgb(255, 101, 71);
+    height: 45px;
+    width: 45px;
+    margin-bottom: 3.8px;
+}
+
+button:hover{
+    background-color: rgb(255, 101, 71,0.6);
+    color: white;
+}
+
+/*#opciones{
+    border-collapse: collapse;
+    border-radius: 10px;
+    background-image: url(imagenes/fondo_tablero2.png);
+}
+
+.opciones{ 
+    border-top: 1px solid rgb(255, 101, 71);
+    border-bottom: 1px solid rgb(255, 101, 71);
+}
+
+.borde_fila_opciones {
+    border-bottom: 3px solid rgb(255, 101, 71);
+}*/
