--- a/Estilo.css
+++ b/Estilo.css
@@ -1,12 +1,21 @@
 /*Estilo General*/
 
+header{
+    height: 75px;
+    width: 100%;
+    background: rgb(71, 71, 71);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+}
+
 h1{
     height: 75px;
-    width: 99%;
+    width: 100%;
     background: rgb(71, 71, 71);
     color: white;
     font-size: 40px;
-    line-height: 75px;
+    line-height: 40px;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     text-shadow: 
@@ -19,7 +28,8 @@ h1{
     0px 7px 0px rgb(100, 38, 26), 
     0px 8px 7px rgb(0, 0, 0);
     position: fixed;
-    top: 10px;
+    top: 0px;
+    left: 0px;
 }
 
 body{
@@ -64,6 +74,7 @@ body{
 }
 
 #botonIndex{
+    margin-top: 30%;
     background-color: rgb(71, 71, 71);
     border: 2px solid rgb(255, 101, 71);
 }
