--- a/Estilo.css
+++ b/Estilo.css
@@ -33,7 +33,7 @@ h1{
 }
 
 body{
-    text-align: center;  
+    text-align: center;
 }
 
 .clearfix{
@@ -101,6 +101,19 @@ body{
 /*Estilo Index*/
 
 /*Estilo Como Jugar*/
+
+#explicativo{
+    padding-top: 5rem;
+    font-family: 'Lato', sans-serif;
+    font-size: 17px;
+}
+
+#video{
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    background-color: rgb(255, 101, 71,0.6);
+    border: 3px solid rgb(255, 101, 71);
+}
 
 #botonComoJugar{
     background-color: white; 
