--- a/Estilo.css
+++ b/Estilo.css
@@ -2,13 +2,12 @@
 
 header {
     height: 75px;
-    width: 100%;
+    width: 99%;
     background: rgb(71, 71, 71);
     position: fixed;
     top: 0px;
     left: 0px;
     border: 3px solid rgb(255, 101, 71);
-    width: 99%;
 }
 
 h1 {
@@ -270,24 +269,9 @@ body {
     border: 2px solid rgb(255, 101, 71);
 }
 
-.botonesTablero {
-    background-color: white;
-    color: rgb(255, 101, 71);
-    border: 2px solid rgb(255, 101, 71);
-    display: block;
-    height: 45px;
-    width: 45px;
-    margin-bottom: 3.8px;
-}
-
 #botonJugar_2:hover {
     background-color: rgb(255, 101, 71, 0.6);
     border: 3px solid rgb(255, 101, 71);
-    color: white;
-}
-
-.botonesTablero:hover {
-    background-color: rgb(255, 101, 71, 0.6);
     color: white;
 }
 
@@ -334,15 +318,15 @@ body {
 
 #divDificultad {
     margin-top: 5%;
-    margin-left: 44%;
+    margin-left: 42%;
 }
 
 #divTiempo {
-    margin-left: 22%;
+    margin-left: 19%;
 }
 
 #divVidas {
-    margin-left: 34%;
+    margin-left: 31%;
 }
 
 .dificultad_tiempo_vidas {
@@ -373,6 +357,7 @@ td {
 
 .tablero {
     display: inline-block;
+    margin-left: 20px;
 }
 
 #borde_tablero {
