--- a/Estilo.css
+++ b/Estilo.css
@@ -116,18 +116,28 @@ body {
     border: 3px solid rgb(255, 101, 71);
 }
 
-
-/*Estilo Como Jugar*/
-
-/*Estilo Jugar*/
-
-#botonSiguiente, #botonVolver {
+#botonSiguiente{
     background-color: white;
     color: rgb(255, 101, 71);
     border: 2px solid rgb(255, 101, 71);
 }
 
-#botonSiguiente:hover, #botonVolver:hover {
+#botonSiguiente:hover{
+    background-color: rgba(255, 101, 71, 60%);
+    border: 3px solid rgb(255, 101, 71);
+    color: white;
+}
+/*Estilo Como Jugar*/
+
+/*Estilo Jugar*/
+
+#botonJugar, #botonVolver {
+    background-color: white;
+    color: rgb(255, 101, 71);
+    border: 2px solid rgb(255, 101, 71);
+}
+
+#botonJugar:hover, #botonVolver:hover {
     background-color: rgba(255, 101, 71, 60%);
     border: 3px solid rgb(255, 101, 71);
     color: white;
