--- a/Estilo.css
+++ b/Estilo.css
@@ -444,48 +444,93 @@ td {
     color: rgb(255, 101, 71);
     text-shadow: 0 0 10px rgb(88, 88, 88), 0 0 20px rgb(158, 158, 158), 0 0 20px rgb(212, 212, 212);
     font-family: Verdana;
+    outline: 0px;
 }
 
 .borde:hover {
     background-color: rgba(255, 42, 0, 0.5);
+    border: 2px solid rgba(255, 42, 0, 0.01);
 }
 
 .borde_1:hover {
     background-color: rgba(255, 42, 0, 0.5);
+    border-left: 2px solid rgba(255, 42, 0, 0.01);
+    border-right: 2px solid rgba(255, 42, 0, 0.01);
+    border-bottom: 2px solid rgba(255, 42, 0, 0.01);
 }
 
 .borde_2:hover {
     background-color: rgba(255, 42, 0, 0.5);
+    border-left: 2px solid rgba(255, 42, 0, 0.01);
+    border-right: 2px solid rgba(255, 42, 0, 0.01);
+    border-top: 2px solid rgba(255, 42, 0, 0.01);
 }
 
 .borde_derecho:hover {
     background-color: rgba(255, 42, 0, 0.5);
+    border-left: 2px solid rgba(255, 42, 0, 0.01);
+    border-top: 2px solid rgba(255, 42, 0, 0.01);
+    border-bottom: 2px solid rgba(255, 42, 0, 0.01);
 }
 
 .borde_1_derecho:hover {
     background-color: rgba(255, 42, 0, 0.5);
+    border-left: 2px solid rgba(255, 42, 0, 0.01);
+    border-bottom: 2px solid rgba(255, 42, 0, 0.01);
 }
 
 .borde_2_derecho:hover {
     background-color: rgba(255, 42, 0, 0.5);
+    border-left: 2px solid rgba(255, 42, 0, 0.01);
+    border-top: 2px solid rgba(255, 42, 0, 0.01);
 }
 
 .borde_3:hover {
     background-color: rgba(255, 42, 0, 0.5);
+    border-bottom: 2px solid rgba(255, 42, 0, 0.01);
+    border-right: 2px solid rgba(255, 42, 0, 0.01);
+    border-top: 2px solid rgba(255, 42, 0, 0.01);
 }
 
 .borde_4:hover {
     background-color: rgba(255, 42, 0, 0.5);
+    border-bottom: 2px solid rgba(255, 42, 0, 0.01);
+    border-left: 2px solid rgba(255, 42, 0, 0.01);
+    border-top: 2px solid rgba(255, 42, 0, 0.01);
 }
 
-.Esquina:hover {
+#E1:hover {
     background-color: rgba(255, 42, 0, 0.5);
+    border-top-left-radius: 7px;
+    border-bottom: 2px solid rgba(255, 42, 0, 0.01);
+    border-right: 2px solid rgba(255, 42, 0, 0.01);
+}
+
+#E2:hover {
+    background-color: rgba(255, 42, 0, 0.5);
+    border-top-right-radius: 7px;
+    border-bottom: 2px solid rgba(255, 42, 0, 0.01);
+    border-left: 2px solid rgba(255, 42, 0, 0.01);
+}
+
+#E3:hover {
+    background-color: rgba(255, 42, 0, 0.5);
+    border-bottom-left-radius: 7px;
+    border-top: 2px solid rgba(255, 42, 0, 0.01);
+    border-right: 2px solid rgba(255, 42, 0, 0.01);
+}
+
+#E4:hover {
+    background-color: rgba(255, 42, 0, 0.5);
+    border-bottom-right-radius: 7px;
+    border-top: 2px solid rgba(255, 42, 0, 0.01);
+    border-left: 2px solid rgba(255, 42, 0, 0.01);
 }
 
 .Incorrecto {
     font-size: 30px;
     color: rgb(255, 0, 0);
-    text-shadow: 0 0 10px rgb(255, 37, 37), 0 0 20px rgb(255, 79, 79), 0 0 20px rgb(255, 145, 145);
+    text-shadow: 0 0 10px rgb(255, 37, 37), 0 0 20px rgb(255, 116, 116), 0 0 20px rgb(255, 208, 208);
 }
 
 .Correcto {
