--- a/Estilo.css
+++ b/Estilo.css
@@ -543,3 +543,20 @@ td {
 .Terminar {
     display: none;
 }
+
+.canvas{
+    display: none;
+}
+
+.mostrarCanvas{
+    display: block;
+}
+
+#myCanvas{
+    background: url(imagenes/fondo_tablero.png);
+    margin: 4em auto 0;
+    display: block;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px 4px rgba(0,0,0,0.6);
+    border: 3px solid #8e8e8e6b;
+}
