--- a/Estilo.css
+++ b/Estilo.css
@@ -426,13 +426,13 @@ td {
 
 .borde_1_derecho {
     border: 1px solid rgb(71, 71, 71);
-    border-top: 0px;
+    border-top: 0;
     border-right: 3px solid rgb(71, 71, 71);
 }
 
 .borde_2_derecho {
     border: 1px solid rgb(71, 71, 71);
-    border-bottom: 0px;
+    border-bottom: 0;
     border-right: 3px solid rgb(71, 71, 71);
 }
 
@@ -442,18 +442,18 @@ td {
 
 .borde_3 {
     border: 1px solid rgb(71, 71, 71);
-    border-left: 0px;
+    border-left: 0;
 }
 
 .borde_4 {
     border: 1px solid rgb(71, 71, 71);
-    border-right: 0px;
+    border-right: 0;
 }
 
 #botones {
     height: 435px;
     position: absolute;
-    top: 0px;
+    top: 0;
 }
 
 .celda {
@@ -464,11 +464,11 @@ td {
     height: 30px;
     line-height: 28px;
     text-align: center;
-    margin: 0px;
+    margin: 0;
     color: rgb(255, 101, 71);
     text-shadow: 0 0 10px rgb(88, 88, 88), 0 0 20px rgb(158, 158, 158), 0 0 20px rgb(212, 212, 212);
-    font-family: Arial;
-    outline: 0px;
+    font-family: Verdana;
+    outline: 0;
 }
 
 .borde:hover {
@@ -589,7 +589,7 @@ td {
     margin: 4em auto 0;
     display: block;
     border-radius: 10px;
-    box-shadow: 0px 0px 20px 4px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 20px 4px rgba(0, 0, 0, 0.6);
     border: 3px solid #8e8e8e6b;
 }
 
